[package]
authors = ["Peter Stuart <peter@peterstuart.org>"]
name = "stm32f3discovery"
edition = "2021"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.6.10"
defmt = "0.3.0"
defmt-rtt = "0.3.0"
gp2d12 = { path = "../.." }
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
stm32f3-discovery = "0.7.2"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

[[bin]]
name = "stm32f3discovery"
test = false
bench = false